# physm

./: .gitignore  circle5_2.py  notes.txt  simulator.ipynb
RedGen/: .gitignore  README.md  build.gradle
actorgraph/: .gitignore  .travis.yml  README.md  pytest.ini  requirements.txt  setup.py  tox.ini
blog/: .eslintrc.yml  .firebaserc  .gitignore  README.md  gatsby-config.js  package-lock.json  package.json
cartpole/: cartpole_model.py  gym-cartpole-dummy.ipynb  gym-cartpole-qlearning.ipynb  requirements.txt
circle/: README.md  circle5.py
circle5/: README.md
csvp/: example.csv  setup.py
dpg/: .gitignore  README.md  dpg.py  pytest  pytest.ini  requirements.txt  test_dpg.py
fuzix/: .gitignore  README.md  blocksprings.ipynb  euler-lagrange.ipynb  make_scene4.sh  multi-lagrange.ipynb  ndulum.ipynb  npendulum.ipynb  pendulum.ipynb  pendulumcart.ipynb  plotzo.ipynb  requirements.txt  scene.ipynb  setup.py  transforms.ipynb  vectorfields.ipynb
gilbenizer/: .gitignore  README.md  massage.py  requirements.txt  split_all.py  split_silence.py  transcribe_many.py
giraffe/: giraffe.py
graphenator/: setup.py
hello-react/: package-lock.json
jquery-cheat-sheet/: README.md
lolrscrape/: Untitled.ipynb  Untitled1.ipynb  Untitled2.ipynb  build.docker  build.sh  cities.json  lolrscrape.ipynb  lsdata  requirements.txt  run.sh  setup.py
mandelbrot/: mandelbrot.ipynb  (+2 more)
physm-rs/: Cargo.toml  LICENSE_MIT
physm-rs/scripts/: build  build-node  build-web
physm-rs/src/: frame.rs  json.rs  lib.rs  rotational_frame.rs  scene.rs  solver.rs  track_frame.rs  weight.rs
(+258 files in other folders)
