[package]
name = "physm-rs"
version = "0.1.0"
authors = ["Karl Kroening <karlk@kralnet.us>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.63"

[dependencies.ndarray]
version = "0.13"
features = ["approx"]

[dependencies.console_error_panic_hook]
version = "0.1.6"
optional = true

[dependencies.web-sys]
version = "0.3"
features = [ "console" ]

[dev-dependencies]
approx = "0.3"
wasm-bindgen-test = "0.3.13"

[profile.release]
opt-level = "s"
